refactor: シンボルの配列を作る場合、%i()で囲う様にする

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,10 @@ Style/Documentation:
 
 AsciiComments:
  Enabled: false
+
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%i': '()'
+    '%I': '()'
+    '%w': '()'
+    '%W': '()'
